--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
 		"eslint-plugin-react-hooks": "4.6.0",
 		"prettier": "2.7.1",
 		"typescript": "4.7.2"
+	},
+	"dependencies": {
+		"axios": "1.4.0"
 	}
 }
