--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"main": "ts-built/index.js",
 	"scripts": {
 		"gcp-build": "npm run build",
-		"build": "tsc",
+		"build": "tsc && npm run prisma:generate",
 		"start": "npm run build && npx @google-cloud/functions-framework --target=main",
 		"prisma:format": "prisma format",
 		"prisma:generate": "prisma generate"
