--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
 	"main": "ts-built/index.js",
 	"scripts": {
 		"gcp-build": "npm run build",
-		"build": "tsc",
-		"start": "npm run build && npx @google-cloud/functions-framework --target=main"
+		"build": "tsc && npm run prisma:generate",
+		"start": "npm run build && npx @google-cloud/functions-framework --target=main",
+		"prisma:format": "prisma format",
+		"prisma:generate": "prisma generate"
 	},
+	"license": "MIT",
 	"devDependencies": {
 		"@babel/core": "7.14.6",
 		"@babel/eslint-parser": "7.14.7",
 		"@babel/eslint-plugin": "7.14.5",
 		"@babel/preset-react": "7.14.5",
 		"@google-cloud/functions-framework": "3.2.0",
+		"@types/node": "^20.3.1",
 		"@typescript-eslint/eslint-plugin": "5.27.0",
 		"@typescript-eslint/parser": "5.27.0",
 		"eslint": "8.25.0",
@@ -23,9 +27,13 @@
 		"eslint-plugin-react": "7.31.10",
 		"eslint-plugin-react-hooks": "4.6.0",
 		"prettier": "2.7.1",
+		"prisma": "4.16.1",
+		"ts-node": "10.9.1",
 		"typescript": "4.7.2"
 	},
 	"dependencies": {
-		"axios": "1.4.0"
+		"@prisma/client": "4.16.1",
+		"axios": "1.4.0",
+		"bson": "5.3.0"
 	}
 }
