Added env vars to gcf

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,3 +30,5 @@ jobs:
         runtime: 'nodejs18'
         max_instances: 1
         region: europe-central2
+        env_vars:
+          DATABASE_URL=${{ secrets.DATABASE_URL }}
